// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    className="c0"
  >
    yoast.com
  </div>,
]
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    className="c0"
  >
    yosat.com
  </div>,
]
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    className="c0"
  >
    yoast.com
  </div>,
]
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    className="c0"
  >
    yoast.com
  </div>,
]
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div
    className="c0"
  >
    yoast.com
  </div>,
]
`;
